[package]
name = "beefy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
futures = "0.3"
hex = "0.4"
log = "0.4"
parking_lot = "0.11"
thiserror = "1.0"

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

beefy-primitives = { path = "../beefy-primitives" }
