[package]
name = "pallet-beefy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-staking-miner" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-staking-miner" }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-staking-miner" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-staking-miner" }

pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "kiz-staking-miner" }

beefy-primitives = { path = "../beefy-primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-staking-miner" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-staking-miner" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-staking-miner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-session/std",
]
