[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-polkadot-v930-rpc-patched" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-polkadot-v930-rpc-patched" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-polkadot-v930-rpc-patched" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-polkadot-v930-rpc-patched" }

[features]
default = []
runtime-benchmarks = []
