[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-buirnin-allocator" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-buirnin-allocator" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "kiz-buirnin-allocator" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-buirnin-allocator" }

[features]
default = []
runtime-benchmarks = []
