[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.21"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "rh-v0.9.5-missing-companions" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "rh-v0.9.5-missing-companions" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "rh-v0.9.5-missing-companions" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }

[features]
default = []
runtime-benchmarks = []
